--- Version 0.5.6 - May-30-2011
- Fixed: Would crash when searching for a term with quotes in the help search window
- Add simple man page for command line options
- Fixed: Potential crash when creating plots from a tcl/tk based GUI
- Fix compilation on FreeBSD
- Replace the R console's "Copy selection cleaned" action with "Copy commands, only", which will omit any non-command regions in the copy
- Add "Copy lines to output" action to copy highlighted lines from the R console or script editors to the output window
- R commands and their output can be "carbon copied" to the output window
- On Windows, RKWard will detect, and offer to disable "native" file system dialogs
- Object browsers that show only the global environment now hide the ".GlobalEnv" item
- Fixed: Function argument hints would not be shown in some corner cases
- Added function rk.print.code() to write highlighted R code to the output window
- Box plot plugin gains support for grouped outcome data
- Fixed: Pressing Ctrl+C would not reset syntactically incomplete commands in the R console
- Crosstabs N to 1 plugin gains options to compute proportions and margins (thanks to Andrés Necochea)
- Added convenience R function rk.list() to allow simplification of plugin code
- Added stack-based window switching using Ctrl+(Shift)+Tab; this replaces the old "Next Window" and "Previous Window" actions
- Fixed: Graphics device windows would disappear when trying to attach them to the main window with some versions of Qt
- Fixed: tcl/tk widgets would lock up after running commands in the R Console
- Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
- When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
- Include the sidebar position of tool windows when saving / restoring the workplace layout
- "Pending jobs" tool window is not longer shown in the bottom sidebar by default